2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Added SPE support to CPU context.

2011-05-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Reformat.

2011-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added FSL_EIS_SVR define.

2011-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added FSL_EIS_ATBL, FSL_EIS_ATBL, and
	FSL_EIS_SPEFSCR defines.

2011-02-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added MSR_UCLE, MSR_SPE, MSR_WE, and
	MSR_UBLE defines.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/powerpc/registers.h, rtems/score/cpu.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-01-31	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Changed Freescale EIS prefix.  More
	Freescale EIS defines.  Added MSR_IS, MSR_DS, and MSR_PMM defines.

2011-01-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added BOOKE_PIR define.

2010-10-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added HID2 define.  Fixed comments.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this
	avoids generation of dead code.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* rtems/score/cpu.h, rtems/score/types.h: Refactoring of priority
	handling, to isolate the bitmap implementation of priorities in the
	supercore so that priority management is a little more modular. This
	change is in anticipation of scheduler implementations that can
	select how they manage tracking priority levels / finding the highest
	priority ready task. Note that most of the changes here are simple